--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,10 @@
 
     <div class="form-group">
       <label>Name</label>
-      <input type="text" class="form-control" name="userName" [(ngModel)]=userModel.name>
+      <input type="text" required #name class="form-control" name="userName" [(ngModel)]=userModel.name>
     </div>
+
+    {{name.className}}
 
     <div class="form-group">
       <label>Email</label>
