--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,16 +3,19 @@
   <h1>Enroll form</h1>
   <form #userForm="ngForm">
 
-    {{userForm.value | json}}
+    <!-- {{userForm.value | json}}
     <hr />
-    {{userModel | json}}
+    {{userModel | json}} -->
 
     <div class="form-group">
       <label>Name</label>
-      <input type="text" required #name class="form-control" name="userName" [(ngModel)]=userModel.name>
+      <input type="text" required #name="ngModel" 
+      [class.is-invalid]="name.invalid && name.touched" class="form-control" 
+      name="userName" [(ngModel)]=userModel.name>
+      <small class="text-danger" [class.d-none]="name.valid || name.untouched">Name is reqd</small>
     </div>
 
-    {{name.className}}
+    <!-- {{name.valid}} -->
 
     <div class="form-group">
       <label>Email</label>
@@ -21,7 +24,14 @@
 
     <div class="form-group">
       <label>Phone</label>
-      <input type="tel" class="form-control" name="phone" [(ngModel)]=userModel.phone>
+      <input type="tel" #phone="ngModel" pattern="^\d{10}$"
+      [class.is-invalid]="phone.invalid && phone.touched" class="form-control" 
+      name="phone" [(ngModel)]=userModel.phone>
+      <div *ngIf="phone.errors && (phone.invalid || phone.touched)">
+        <small class="text-danger" *ngIf="phone.errors.required && phone.touched">Phone no is reqd</small>
+        <small class="text-danger" *ngIf="phone.errors.pattern">Must be 10 digits</small>
+
+      </div>
     </div>
 
     <div class="form-group">
@@ -52,3 +62,5 @@
     <button class="btn btn-primary" type="submit">Submit here</button>
   </form>
 </div>
+
+<!-- <input type="text" [value]="first"> -->
