--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,66 +1,51 @@
-<!-- <button class="btn btn-primary">Submit</button> -->
 <div class="container-fluid">
-  <h1>Enroll form</h1>
-  <form #userForm="ngForm">
 
-    <!-- {{userForm.value | json}}
-    <hr />
-    {{userModel | json}} -->
-
+  <h2>Register form</h2>
+  <form [formGroup]="registrationForm">
+    <!-- {{registrationForm.value | json}} -->
     <div class="form-group">
-      <label>Name</label>
-      <input type="text" required #name="ngModel" 
-      [class.is-invalid]="name.invalid && name.touched" class="form-control" 
-      name="userName" [(ngModel)]=userModel.name>
-      <small class="text-danger" [class.d-none]="name.valid || name.untouched">Name is reqd</small>
-    </div>
-
-    <!-- {{name.valid}} -->
-
-    <div class="form-group">
-      <label>Email</label>
-      <input type="email" class="form-control" name="email" [(ngModel)]=userModel.email> 
+      <label>UserName</label>
+      <input [class.is-invalid]="userName!.invalid &&
+      userName!.touched" formControlName="userName" type="text" class="form-control">
+      <!-- <small [class.d-none]="userName!.valid || -->
+                              <!-- userName!.untouched" class="text-danger">Required</small> -->
+       <div *ngIf="userName!.invalid && userName!.touched">
+         <small *ngIf="userName!.errors?.required" class="text-danger">Required</small>
+         <small *ngIf="userName!.errors?.minlength" class="text-danger">Check length</small>
+       </div> 
     </div>
 
     <div class="form-group">
-      <label>Phone</label>
-      <input type="tel" #phone="ngModel" pattern="^\d{10}$"
-      [class.is-invalid]="phone.invalid && phone.touched" class="form-control" 
-      name="phone" [(ngModel)]=userModel.phone>
-      <div *ngIf="phone.errors && (phone.invalid || phone.touched)">
-        <small class="text-danger" *ngIf="phone.errors.required && phone.touched">Phone no is reqd</small>
-        <small class="text-danger" *ngIf="phone.errors.pattern">Must be 10 digits</small>
+      <label>Password</label>
+      <input formControlName="password" type="password" class="form-control">
+    </div>
 
+    <div class="form-group">
+      <label>Confirm Password</label>
+      <input formControlName="confirmPassword" type="password" class="form-control">
+    </div>
+
+    <div formGroupName="address">
+      <div class="form-group">
+        <label>City</label>
+        <input formControlName="city" type="text" class="form-control">
       </div>
-    </div>
-
-    <div class="form-group">
-      <select class="custom-select" name="topic" [(ngModel)]=userModel.topic>
-        <option selected>I am interested in</option>
-        <option *ngFor="let topic of topics">{{topic }}</option>
-      </select>
-    </div>
-
-    <div class="mb-3">
-      <label>Time preferred</label>
-      <div class="form-check">
-        <input type="radio" value="morning" [(ngModel)]=userModel.timePreference class="form-check-input" name="timePreference">
-        <label class="form-check-label">Morning (9-5)</label>
-
+  
+      <div class="form-group">
+        <label>State</label>
+        <input formControlName="state" type="text" class="form-control">
       </div>
-      <div class="form-check">
-        <input type="radio" value="evening" [(ngModel)]=userModel.timePreference class="form-check-input" name="timePreference">
-        <label class="form-check-label">Eveing (5-8)</label>
-      </div>  
+  
+      <div class="form-group">
+        <label>Postal Code</label>
+        <input formControlName="postalCode" type="text" class="form-control">
+      </div>
+  
     </div>
 
-    <div class="form-check mb-3">
-      <input type="checkbox" [(ngModel)]=userModel.subscribe name="subscribe" class="form-check-input">
-      <label class="form-check-label">Send me promos</label>
-    </div>
-
-    <button class="btn btn-primary" type="submit">Submit here</button>
+    <button class="btn btn-primary" type="submit">Register</button>
+    <button (click)="loadApiData()" class="btn btn-secondary ml-2" type="button">Load API</button>
   </form>
-</div>
 
-<!-- <input type="text" [value]="first"> -->
+  
+</div>
