--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,17 @@
 
        </div> 
     </div>
+    <div class="form-group">
+      <label>Email</label>
+      <input type="text" [class.is-invalid]="email!.invalid && email!.touched" formControlName="email" class="form-control">
+      <small class="text-danger" [class.d-none]="email!.valid || email!.untouched">Email is required</small>
+    </div>
+
+    <div class="form-check mb-3">
+      <input type="checkbox" formControlName="subscribe" class="form-check-input">
+      <label class="form-check-label">Send me promos</label>
+    </div>
+
 
     <div class="form-group">
       <label>Password</label>
